--- a/MusicalScaleKit/Info.plist
+++ b/MusicalScaleKit/Info.plist
@@ -6,4 +6,4 @@
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifi
+	<key>CFBundleIdentifier</key>
