--- a/MusicalScaleKit/Info.plist
+++ b/MusicalScaleKit/Info.plist
@@ -9,3 +9,4 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6
