--- a/MusicalScaleKit/Info.plist
+++ b/MusicalScaleKit/Info.plist
@@ -14,4 +14,4 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
-	<key>CFBundleShortVers
+	<key>CFBundleShortVersionString</key>
