--- a/MusicalScaleKit/Info.plist
+++ b/MusicalScaleKit/Info.plist
@@ -15,4 +15,5 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</s
+	<string>1.0</string>
+	<k
