Ingénieur Système Linux

--- a/MusicalScaleKit/Info.plist
+++ b/MusicalScaleKit/Info.plist
@@ -17,4 +17,5 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</stri
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NS
