tools/power turbostat: Use $(CURDIR) instead of $(PWD) and add support for O= option in Makefile

--- a/MusicalScaleKit/Info.plist
+++ b/MusicalScaleKit/Info.plist
@@ -19,4 +19,4 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSPrincipalClass</key>
-	<stri
+	<string></string>
