--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -14,4 +14,4 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifi
+               BlueprintIdentifier = "4B
