--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -15,4 +15,4 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
-               BuildableNa
+               BuildableName = "MusicalSca
