Fix build warning

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -17,4 +17,5 @@
                BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
                BuildableName = "MusicalScaleKit.framework"
                BlueprintName = "MusicalScaleKit"
-               ReferencedContainer = "container:MusicalScaleKit.xc
+               ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
+  
