ALSA: hda/realtek - Set pcbeep amp for ALC668

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -18,4 +18,4 @@
                BuildableName = "MusicalScaleKit.framework"
                BlueprintName = "MusicalScaleKit"
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
-            </B
+            </BuildableRefer
