--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -18,4 +18,5 @@
                BuildableName = "MusicalScaleKit.framework"
                BlueprintName = "MusicalScaleKit"
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
-            </BuildableRefer
+            </BuildableReference>
+         </Build
