fixed build errors

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -19,4 +19,4 @@
                BlueprintName = "MusicalScaleKit"
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
-         </Build
+         </BuildActionEnt
