--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -19,4 +19,5 @@
                BlueprintName = "MusicalScaleKit"
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
-         </BuildActionEnt
+         </BuildActionEntry>
+      
