update meta description

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -20,4 +20,4 @@
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-      
+      </BuildActionEntrie
