USB: ftdi_sio: fixed handling of unsupported CSIZE setting

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -20,4 +20,5 @@
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-      </BuildActionEntrie
+      </BuildActionEntries>
+   </
