--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -21,4 +21,5 @@
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
-   </BuildActio
+   </BuildAction>
+   <TestAct
