Maven artifacts for Cognitive KR Factory version 1.0.1-SNAPSHOT

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -24,4 +24,4 @@
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedDebuggerIde
+      selectedDebuggerIdentifier = "Xcode.D
