--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -25,4 +25,4 @@
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFounda
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.
