--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -30,4 +30,5 @@
       <Testables>
          <TestableReference
             skipped = "NO">
-            <BuildableRefere
+            <BuildableReference
+       
