--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -31,4 +31,4 @@
          <TestableReference
             skipped = "NO">
             <BuildableReference
-               Builda
+               BuildableIdentifier
