--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -32,4 +32,4 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-  
+               Bluepri
