--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -33,4 +33,5 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4BDAA45B1E475B8700EA41ED"
-               BuildableName = "MusicalScaleKitTests.xctes
+               BuildableName = "MusicalScaleKitTests.xctest"
+      
