USB: option: blacklist QMI interface on ZTE MF683

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -34,4 +34,4 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4BDAA45B1E475B8700EA41ED"
                BuildableName = "MusicalScaleKitTests.xctest"
-      
+               Blu
