updated version number

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -34,4 +34,5 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4BDAA45B1E475B8700EA41ED"
                BuildableName = "MusicalScaleKitTests.xctest"
-               BlueprintName = "MusicalScaleKitTest
+               BlueprintName = "MusicalScaleKitTests"
+           
