chore(package): update standard to version 10.0.2

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -35,4 +35,4 @@
                BlueprintIdentifier = "4BDAA45B1E475B8700EA41ED"
                BuildableName = "MusicalScaleKitTests.xctest"
                BlueprintName = "MusicalScaleKitTests"
-           
+               Refer
