--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -35,4 +35,5 @@
                BlueprintIdentifier = "4BDAA45B1E475B8700EA41ED"
                BuildableName = "MusicalScaleKitTests.xctest"
                BlueprintName = "MusicalScaleKitTests"
-               ReferencedContainer = "container:MusicalScaleKit.xcode
+               ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
+            </Buil
