Added some translations

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -36,4 +36,4 @@
                BuildableName = "MusicalScaleKitTests.xctest"
                BlueprintName = "MusicalScaleKitTests"
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
-            </Buil
+            </BuildableReference>
