--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -37,4 +37,4 @@
                BlueprintName = "MusicalScaleKitTests"
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
-         </Testa
+         </TestableReference>
