--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -38,3 +38,4 @@
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
          </TestableReference>
+      </Tes
