--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -38,4 +38,5 @@
                ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
             </BuildableReference>
          </TestableReference>
-      </Tes
+      </Testables>
+      <
