--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -39,4 +39,5 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpans
+      <MacroExpansion>
+         <B
