--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -40,4 +40,5 @@
          </TestableReference>
       </Testables>
       <MacroExpansion>
-         <BuildableReferen
+         <BuildableReference
+            
