--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -41,4 +41,5 @@
       </Testables>
       <MacroExpansion>
          <BuildableReference
-            BuildableIdentifier
+            BuildableIdentifier = "primary"
+   
