--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -43,4 +43,5 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
-            BuildableName = "MusicalScaleKit.frame
+            BuildableName = "MusicalScaleKit.framework"
+        
