--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -44,4 +44,4 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
             BuildableName = "MusicalScaleKit.framework"
-        
+            Bluepri
