--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -49,4 +49,5 @@
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
-      </AdditionalOpt
+      </AdditionalOptions>
+   </Te
