--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -62,4 +62,4 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
-       
+         <BuildableRef
