--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -63,4 +63,5 @@
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
-            BuildableIdentifier
+            BuildableIdentifier = "primary"
+       
