--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -66,4 +66,4 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
             BuildableName = "MusicalScaleKit.framework"
-            Bluepr
+            BlueprintName = "Musica
