Updated the awscli feedstock.

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -67,4 +67,4 @@
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
             BuildableName = "MusicalScaleKit.framework"
             BlueprintName = "MusicalScaleKit"
-            ReferencedContainer = "container:MusicalScale
+            ReferencedContainer = "container:MusicalScaleKit.xcodeproj
