--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -70,4 +70,4 @@
             ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <Ad
+      <AdditionalOpti
