--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -71,4 +71,5 @@
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
-      </AdditionalOptio
+      </AdditionalOptions>
+   </LaunchAc
