--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -72,4 +72,6 @@
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
-   </LaunchAc
+   </LaunchAction>
+   <ProfileAction
+   
