--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -81,4 +81,4 @@
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
-            Buildabl
+            BuildableIdentifier 
