--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -81,4 +81,5 @@
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
-            BuildableIdentifier 
+            BuildableIdentifier = "primary"
+    
