xfrm: Increase the garbage collector threshold

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -82,4 +82,5 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4BDAA4521E475B8700EA4
+            BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
+            
