--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -83,4 +83,4 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
-            BuildableName = "
+            BuildableName = "MusicalScale
