--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -84,4 +84,5 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
             BuildableName = "MusicalScaleKit.framework"
-            BlueprintName = "Musi
+            BlueprintName = "MusicalScaleKit"
+   
