Formatting and cleanup

--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -85,4 +85,4 @@
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
             BuildableName = "MusicalScaleKit.framework"
             BlueprintName = "MusicalScaleKit"
-            Referen
+            ReferencedContainer = "contai
