--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -85,4 +85,5 @@
             BlueprintIdentifier = "4BDAA4521E475B8700EA41ED"
             BuildableName = "MusicalScaleKit.framework"
             BlueprintName = "MusicalScaleKit"
-            ReferencedContainer = "container:MusicalScaleKit.xcode
+            ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
+    
