--- a/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
+++ b/MusicalScaleKit.xcodeproj/xcshareddata/xcschemes/MusicalScaleKit.xcscheme
@@ -88,4 +88,4 @@
             ReferencedContainer = "container:MusicalScaleKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-   </Profile
+   </ProfileAction>
