--- a/MusicalScaleKitTests/Info.plist
+++ b/MusicalScaleKitTests/Info.plist
@@ -4,4 +4,5 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>CFBundleExecutable<
+	<key>CFBundleExecutable</key>
+	<string
