--- a/MusicalScaleKitTests/Info.plist
+++ b/MusicalScaleKitTests/Info.plist
@@ -5,4 +5,4 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string
+	<string>$(EXECUTABLE_NAME)</s
