--- a/MusicalScaleKitTests/Info.plist
+++ b/MusicalScaleKitTests/Info.plist
@@ -5,4 +5,5 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</s
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBun
