--- a/MusicalScaleKitTests/Info.plist
+++ b/MusicalScaleKitTests/Info.plist
@@ -6,4 +6,5 @@
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdent
+	<key>CFBundleIdentifier</key>
+	<strin
