--- a/MusicalScaleKitTests/Info.plist
+++ b/MusicalScaleKitTests/Info.plist
@@ -14,4 +14,5 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
-	<key>CFBundleShortVersionString</k
+	<key>CFBundleShortVersionString</key>
+	<strin
